--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>彩色雨</title>
+    <title>彩色雨-个人技术博客</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="google" content="notranslate">
     <meta name="keywords" content="Fechin,"> 
     
-    <meta name="author" content="彩色雨"> 
-    <link rel="alternative" href="atom.xml" title="彩色雨" type="application/atom+xml"> 
+    <meta name="author" content="苏三"> 
+    <link rel="alternative" href="atom.xml" title="彩色雨-个人技术博客" type="application/atom+xml"> 
     <link rel="icon" href="/img/favicon.png"> 
     <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
     <link rel="stylesheet" href="/css/diaspora.css">
@@ -46,7 +46,7 @@
         
     </ul>
     <p id="copyright">
-        &copy; 2018 彩色雨.
+        &copy; 2018 苏三.
         Powered by <a href="http://hexo.io/" title="Hexo" target="_blank" rel="noopener">Hexo</a>
         Theme <a href="https://github.com/Fechin/hexo-theme-diaspora" title="Diaspora" target="_blank" rel="noopener">Diaspora</a>
         by Fechin
