--- a/cors/index.html
+++ b/cors/index.html
@@ -1355,5 +1355,8 @@
 
   
 
+  <!-- 代码块复制功能 -->
+  <script type="text/javascript" src="/js/src/clipboard/clipboard.min.js"></script>  
+  <script type="text/javascript" src="/js/src/clipboard/clipboard-use.js"></script>
 </body>
 </html>
