--- a/index.html
+++ b/index.html
@@ -2052,5 +2052,8 @@
 
   
 
+  <!-- 代码块复制功能 -->
+  <script type="text/javascript" src="/js/src/clipboard/clipboard.min.js"></script>  
+  <script type="text/javascript" src="/js/src/clipboard/clipboard-use.js"></script>
 </body>
 </html>
